index.html header element organization with link to header.css page, add styling to header.css with main elements

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -27,14 +28,35 @@
   </head>
 
   <body>
+    
     <!-- Top nav bar (fixed) -->
     <nav>
-      <ul class="nav-container">
+
+      <div class="nav-left">
         <span id = "logo">Tweeter</span>
-        <!-- <span class = "new-tweet">Write a new tweet</span> -->
+      </div>
+
+      <div class="nav-right">
+        <span class = "new-tweet"><b>Create Tweet</b></span>
         <i class="fas fa-angle-double-down"></i>
-      </ul>
+      </div>
+
     </nav>
+
+
+  <!-- HEADER -->
+  <header id="main-header">
+      <div class="header-ex">
+          <img src="/images/profile-hex.png"> 
+      </div>
+
+      <br>
+      
+      <div class="header-ex-text">
+          <h2>Example</h2>
+      </div>
+
+  </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
