change color styling to dark-mode + add background image to body and nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   <!-- HEADER -->
   <header id="main-header">
       <div class="header-ex">
-          <img src="/images/profile-hex.png"> 
+          <img src="/images/profile-mod.png"> 
       </div>
 
       <br>
