--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- Time-Ago -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" 
+    integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer">
+    </script>
+
     <!-- Bungee Font -->
     <!-- Source Sans Pro -->
     <link
@@ -28,18 +35,19 @@
     />
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/other-tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    
 
     <!-- App JS -->
     <script type="text/javascript" src="./scripts/client.js"></script>
     <script type="text/javascript" src="./scripts/composer-char-counter.js"></script>
-
   </head>
 
   <body>
@@ -71,10 +79,12 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
 
+      <!-- FLAVOUR TEXT FOR TWEET -->
       <div class="tweet-title">
         <h2>What are you on about?</h2>
       </div>
 
+      <!-- NEW TWEET -->
       <section class="new-tweet">
         <h2>New Tweet</h2>
         <form method="POST" action="/tweets">
@@ -87,6 +97,31 @@
         </form>
       </section>
 
+      <!-- EXISTING TWEETS -->
+      <section class="other-tweets">
+        <article class="other-tweet">
+
+          <header class="other-tweet-header"><b>Name</b>
+          </header>
+
+          <div class="other-tweet-body">
+            Example-
+          </div>
+
+          <footer class="other-tweet-footer"><b>Days Ago</b>
+            <div id="message-icon" class="message-icon">
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="fas fa-heart"></i>
+            </div>
+
+          </footer>
+
+        </article>
+      </section>
+
     </main>
+    <!-- <script type ="text/javascript">window.onload = function() {             what();             function what(){                 document.getElementById('hello').innerHTML = 'hi';             };         }         </script> -->
+    <!-- <script type="text/javascript" src="./scripts/client.js"></script> -->
   </body>
 </html>
