add shadow box to new-tweet textbox, and other-tweet text box as well as tweet button. add color change on hover to icons on other-tweet

--- a/public/index.html
+++ b/public/index.html
@@ -109,12 +109,11 @@
           </div>
 
           <footer class="other-tweet-footer"><b>Days Ago</b>
-            <div id="message-icon" class="message-icon">
-              <i class="fas fa-flag"></i>
-              <i class="fas fa-retweet"></i>
-              <i class="fas fa-heart"></i>
+            <div class="message-icon">
+              <i id="icon-flag" class="fas fa-flag"></i>
+              <i id="icon-retweet" class="fas fa-retweet"></i>
+              <i id="icon-heart" class="fas fa-heart"></i>
             </div>
-
           </footer>
 
         </article>
