add fixed nav bar. set opacity for nav bar. adjust header area margin to avoid overlap with nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
     </nav>
 
     <!-- HEADER -->
-    <header id="main-header">
+    <header id="body-header">
       <div class="header-ex">
         <img src="/images/profile-mod.png" />
       </div>
@@ -98,6 +98,48 @@
       </section>
 
       <!-- EXISTING TWEETS -->
+      <section class="other-tweets">
+        <article class="other-tweet">
+
+          <header class="other-tweet-header"><b>Name</b>
+          </header>
+
+          <div class="other-tweet-body">
+            Example-
+          </div>
+
+          <footer class="other-tweet-footer"><b>Days Ago</b>
+            <div class="message-icon">
+              <i id="icon-flag" class="fas fa-flag"></i>
+              <i id="icon-retweet" class="fas fa-retweet"></i>
+              <i id="icon-heart" class="fas fa-heart"></i>
+            </div>
+          </footer>
+
+        </article>
+      </section>
+
+      <section class="other-tweets">
+        <article class="other-tweet">
+
+          <header class="other-tweet-header"><b>Name</b>
+          </header>
+
+          <div class="other-tweet-body">
+            Example-
+          </div>
+
+          <footer class="other-tweet-footer"><b>Days Ago</b>
+            <div class="message-icon">
+              <i id="icon-flag" class="fas fa-flag"></i>
+              <i id="icon-retweet" class="fas fa-retweet"></i>
+              <i id="icon-heart" class="fas fa-heart"></i>
+            </div>
+          </footer>
+
+        </article>
+      </section>
+
       <section class="other-tweets">
         <article class="other-tweet">
 
