add new elements in other-tweet header for html for username, profile icon + tweeterhandler. add css styling to keep all new elements inline

--- a/public/index.html
+++ b/public/index.html
@@ -101,49 +101,10 @@
       <section class="other-tweets">
         <article class="other-tweet">
 
-          <header class="other-tweet-header"><b>Name</b>
-          </header>
-
-          <div class="other-tweet-body">
-            Example-
-          </div>
-
-          <footer class="other-tweet-footer"><b>Days Ago</b>
-            <div class="message-icon">
-              <i id="icon-flag" class="fas fa-flag"></i>
-              <i id="icon-retweet" class="fas fa-retweet"></i>
-              <i id="icon-heart" class="fas fa-heart"></i>
-            </div>
-          </footer>
-
-        </article>
-      </section>
-
-      <section class="other-tweets">
-        <article class="other-tweet">
-
-          <header class="other-tweet-header"><b>Name</b>
-          </header>
-
-          <div class="other-tweet-body">
-            Example-
-          </div>
-
-          <footer class="other-tweet-footer"><b>Days Ago</b>
-            <div class="message-icon">
-              <i id="icon-flag" class="fas fa-flag"></i>
-              <i id="icon-retweet" class="fas fa-retweet"></i>
-              <i id="icon-heart" class="fas fa-heart"></i>
-            </div>
-          </footer>
-
-        </article>
-      </section>
-
-      <section class="other-tweets">
-        <article class="other-tweet">
-
-          <header class="other-tweet-header"><b>Name</b>
+          <header class="other-tweet-header">
+            <i class="fas fa-cat"></i>
+            <div class="user-name"><b>Name</b></div>
+            <div class="tweeter-handle">@Name</div>
           </header>
 
           <div class="other-tweet-body">
