add in dynamic tweet functionality in client.js, add in hardcoded userDatabase to draw temp info from. css styling changes

--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
         <article class="other-tweet">
 
           <header class="other-tweet-header">
-            <i class="fas fa-cat"></i>
+            <img class="other-avatar" src="https://img.icons8.com/nolan/30/cat.png"/>
             <div class="user-name"><b>Name</b></div>
             <div class="tweeter-handle">@Name</div>
           </header>
