add id to the submit-form in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
     <!-- App JS -->
     <script type="text/javascript" src="./scripts/client.js"></script>
     <script type="text/javascript" src="./scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="./scripts/formSubmission.js"></script>
   </head>
 
   <body>
@@ -87,7 +88,7 @@
       <!-- NEW TWEET -->
       <section class="new-tweet">
         <h2>New Tweet</h2>
-        <form method="POST" action="/tweets">
+        <form id="submit-form" method="POST" action="/tweets">
           <label for="tweet-text"></label>
           <textarea name="text" id="text-box" placeholder="Enter Text"></textarea>
           <div class="text-area">
