move formSubmission.js functionality into client.js. create a submitHandler and errorHandler to handle maxChar + empty message errors. comment out index.html default other-tweets article as its dynamically generated with client.js. remaining bugs to fix - error messages stacking + wrap of textbox

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,6 @@
     <!-- App JS -->
     <script type="text/javascript" src="./scripts/client.js"></script>
     <script type="text/javascript" src="./scripts/composer-char-counter.js"></script>
-    <script type="text/javascript" src="./scripts/formSubmission.js"></script>
   </head>
 
   <body>
@@ -80,6 +79,10 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
 
+      <div class="alert-message">
+        <p></p>
+      </div>
+
       <!-- FLAVOUR TEXT FOR TWEET -->
       <div class="tweet-title">
         <h2>What are you on about?</h2>
@@ -100,9 +103,9 @@
 
       <!-- EXISTING TWEETS -->
       <section class="other-tweets">
-        <article class="other-tweet">
+        <!-- <article class="other-tweet"> -->
 
-          <header class="other-tweet-header">
+          <!-- <header class="other-tweet-header">
             <img class="other-avatar" src="https://img.icons8.com/nolan/30/cat.png"/>
             <div class="user-name"><b>Name</b></div>
             <div class="tweeter-handle">@Name</div>
@@ -118,13 +121,11 @@
               <i id="icon-retweet" class="fas fa-retweet"></i>
               <i id="icon-heart" class="fas fa-heart"></i>
             </div>
-          </footer>
+          </footer> -->
 
-        </article>
+        <!-- </article> -->
       </section>
 
     </main>
-    <!-- <script type ="text/javascript">window.onload = function() {             what();             function what(){                 document.getElementById('hello').innerHTML = 'hi';             };         }         </script> -->
-    <!-- <script type="text/javascript" src="./scripts/client.js"></script> -->
   </body>
 </html>
