remove unneeded formSubmission.js, add in comments through client.js and layout.css and index.html explaining functionality

--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
 
+      <!-- Alert-Message for Errors -->
       <div class="alert-message">
         <p></p>
       </div>
