add additional icons to index.html for New Tweet. change double-down angle to larger size. change usernames to be brighter

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -59,7 +60,7 @@
 
       <div class="nav-right">
         <span class="new-tweet"><b>Create Tweet</b></span>
-        <i class="fas fa-angle-double-down"></i>
+        <i class="fas fa-angle-double-down fa-lg"></i>
       </div>
     </nav>
 
@@ -86,7 +87,7 @@
 
       <!-- NEW TWEET -->
       <section class="new-tweet">
-        <h2>New Tweet</h2>
+        <h2><img src="https://img.icons8.com/nolan/35/chicken.png"/> New Tweet</h2>
         <form id="submit-form" method="POST" action="/tweets">
           <label for="tweet-text"></label>
           <textarea name="text" id="text-box" placeholder="Enter Text"></textarea>
@@ -110,11 +111,9 @@
             <div class="user-name"><b>Name</b></div>
             <div class="tweeter-handle">@Name</div>
           </header>
-
           <div class="other-tweet-body">
             Example-
           </div>
-
           <footer class="other-tweet-footer"><b>Days Ago</b>
             <div class="message-icon">
               <i id="icon-flag" class="fas fa-flag"></i>
