--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
     <!-- HEADER -->
     <header id="body-header">
       <div class="header-ex">
-        <img src="/images/profile-mod.png" />
+        <img src="/images/profile-mod.png"/>
       </div>
 
       <br />
@@ -87,7 +87,7 @@
 
       <!-- NEW TWEET -->
       <section class="new-tweet">
-        <h2><img src="https://img.icons8.com/nolan/35/chicken.png"/> New Tweet</h2>
+        <h2><i class="far fa-comment"></i> New Tweet</h2>
         <form id="submit-form" method="POST" action="/tweets">
           <label for="tweet-text"></label>
           <textarea name="text" id="text-box" placeholder="Enter Text"></textarea>
