stretch goal - change Create Tweet into a button, styling added

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="nav-right">
-        <span class="new-tweet"><b>Create Tweet</b></span>
+        <button class="new-tweet" type="button"><b>Create Tweet</b></button>
         <i class="fas fa-angle-double-down fa-lg"></i>
       </div>
     </nav>
