--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,10 @@
       <section class="other-tweets">
       </section>
 
+      <div>
+        <button id="scroll-button" type="button"><b>Scroll Up</b></button>
+      </div>
+
     </main>
   </body>
 </html>
