add additional comments to index.html sections, clean up formatting, change scroll-button default color to match styling

--- a/public/index.html
+++ b/public/index.html
@@ -76,17 +76,15 @@
         <h2>J L</h2>
       </div>      
       
+      <!-- FLAVOUR TEXT -->
       <div class="tweet-title">
         <h2>What are you on about ?</h2>
       </div>
 
     </header>
 
-    <!-- Page-specific (main) content here -->
+    <!-- MAIN CONTENT -->
     <main class="container">
-
-      <!-- FLAVOUR TEXT FOR TWEET -->
-
 
       <!-- NEW TWEET -->
       <section id="new-tweet-id" class="new-tweet hidden-tweet">
@@ -97,7 +95,7 @@
             <button id = "tweet-button" type="submit">Tweet</button>
             <output id = "counter" class="counter" for="tweet-text">140</output>
           </div>
-      <!-- Alert-Message for Errors -->
+      <!-- ALERT-MESSAGE FOR ERRORS -->
         <div class="alert-message">
         </div>
         </form>
@@ -106,9 +104,10 @@
       <!-- EXISTING TWEETS -->
       <section class="other-tweets">
       </section>
-
+      
+      <!-- SCROLL-UP BUTTON -->
       <div>
-        <button id="scroll-button" type="button"><b>Scroll Up</b></button>
+        <button id="scroll-button" type="button" ><i class="fas fa-angle-double-up"></i></button>
       </div>
 
     </main>
