eslint client.js, comment changes

--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
       
       <!-- SCROLL-UP BUTTON -->
       <div>
-        <button id="scroll-button" type="button" ><i class="fas fa-angle-double-up"></i></button>
+        <button id="scroll-button" type="button" ><i class="fas fa-angle-double-up fa-lg"></i></button>
       </div>
 
     </main>
