change Tweeter logo into page refresh

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
     <!-- NAV BAR (fixed) -->
     <nav>
       <div class="nav-left">
-        <span id="logo">Tweeter</span>
+        <span id="logo"><a href="/" style="color: #66FCF1; text-decoration:none;">Tweeter</a></span>
       </div>
 
       <div class="nav-right">
