code format clean up

--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,8 @@
       <div class="header-ex">
         <img src="/images/profile-mod.png"/>
       </div>
-
       <br />
+
       <!-- HEADER PROFILE PICTURE NAME -->
       <div class="header-ex-text">
         <h2>Justin Lam</h2>
@@ -80,7 +80,6 @@
       <div class="tweet-title">
         <h2>What are you on about ?</h2>
       </div>
-
     </header>
 
     <!-- MAIN CONTENT -->
@@ -91,20 +90,19 @@
         <h2><i class="far fa-comment"></i> NEW TWEET</h2>
         <form id="submit-form" method="POST" action="/tweets">
           <textarea name="text" id="text-box" placeholder="Enter Text"></textarea>
+          
           <div class="text-area">
             <button id = "tweet-button" type="submit">TWEET</button>
             <output id = "counter" class="counter" for="tweet-text">140</output>
           </div>
 
           <!-- ALERT-MESSAGE FOR ERRORS -->
-          <div class="alert-message">
-          </div>
+          <div class="alert-message"></div>
         </form>
       </section>
 
       <!-- EXISTING TWEETS -->
-      <section class="other-tweets">
-      </section>
+      <section class="other-tweets"></section>
       
       <!-- SCROLL-UP BUTTON -->
       <div>
